; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libgeom/extr_geom_stats.c_geom_stats_close.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libgeom/extr_geom_stats.c_geom_stats_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@statsfd = common dso_local global i32 0, align 4
@statp = common dso_local global i32* null, align 8
@npages = common dso_local global i32 0, align 4
@pagesize = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @geom_stats_close() #0 {
  %1 = load i32, i32* @statsfd, align 4
  %2 = icmp eq i32 %1, -1
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %12

4:                                                ; preds = %0
  %5 = load i32*, i32** @statp, align 8
  %6 = load i32, i32* @npages, align 4
  %7 = load i32, i32* @pagesize, align 4
  %8 = mul nsw i32 %6, %7
  %9 = call i32 @munmap(i32* %5, i32 %8)
  store i32* null, i32** @statp, align 8
  %10 = load i32, i32* @statsfd, align 4
  %11 = call i32 @close(i32 %10)
  store i32 -1, i32* @statsfd, align 4
  br label %12

12:                                               ; preds = %4, %3
  ret void
}

declare dso_local i32 @munmap(i32*, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
